--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "browser-sync": "^2.24.6",
     "del": "^3.0.0",
     "gulp": "^4.0.0",
+    "gulp-cheerio": "^0.6.3",
     "gulp-gh-pages": "^0.5.4",
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^7.0.1",
-    "gulp-sass": "^4.0.1"
+    "gulp-sass": "^4.0.1",
+    "gulp-svg-sprite": "^1.5.0",
+    "gulp-svgmin": "^2.1.0",
+    "postcss-pxtorem": "^4.0.1"
   },
   "dependencies": {
     "normalize.css": "^8.0.0"
